--- a/index.html
+++ b/index.html
@@ -7,4 +7,13 @@
         <link rel="stylesheet" type="text/css" src="assets/css/hangman.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </head>
+    <body>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">Title</div>
+                <div class="col-sm-6">win lose image</div>
+                <div class="col-sm-6">game text</div>
+            </div>
+        </div>
+    </body>
 </html>
