--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
     <head>
         <title>Hangman!</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" src="assets/css/hangman.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/hangman.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <style>
+            $enable-gradients: true;
+        </style>
     </head>
-    <body>
+    <body class="main">
+        <br>
+        <br>
         <div class="container">
             <div class="row">
-                <div class="col-sm-12">Title</div>
-                <div class="col-sm-6">win lose image</div>
-                <div class="col-sm-6">game text</div>
+                <div class="col-sm-12 border-bottom border-white" id="title">Jazz Musician Word Guess</div>
+                <div class="col-sm-6 border-right border-white">win lose image</div>
+                <div class="col-sm-6 border-left border-white">game text</div>
             </div>
         </div>
     </body>
