initial js, add names var, random name selection

--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 
 <html lang="en">
-    <head>
-        <title>Hangman!</title>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="assets/css/hangman.css">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <style>
-            $enable-gradients: true;
-        </style>
-    </head>
-    <body class="main">
-        <br>
-        <br>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12 border-bottom border-white" id="title">Jazz Musician Word Guess</div>
-                <div class="col-sm-6 border-right border-white">win lose image</div>
-                <div class="col-sm-6 border-left border-white">game text</div>
-            </div>
+
+<head>
+    <title>Jazz Musician Word Guess</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="assets/css/hangman.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+</head>
+
+<body class="main">
+    <br>
+    <br>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 border-bottom border-white" id="title">Jazz Musician Word Guess</div>
+            <script type="text/javascript" src="assets/javascript/game.js"></script>
         </div>
-    </body>
+    </div>
+</body>
+
 </html>
