--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-    <title>Jazz Musician Word Guess</title>
+    <title>Jazz Musician Name Guess</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="assets/css/hangman.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -16,9 +16,11 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12 border-bottom border-white" id="title">Jazz Musician Word Guess</div>
-            <script type="text/javascript" src="assets/javascript/game.js"></script>
+            <div class="col-sm-6 border-right border-white">win lose image</div>
+            <div class="col-sm-6 border-left border-white"><p id="musicianname">----</p></div>
         </div>
     </div>
+    <script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
 
 </html>
