updates before submission

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="col-sm-6 border-left border-white">
                 <h1>Guess the musician's name!</h1>
-                <p>Press your first guessed lettre on the keyboard to start.</p>
+                <p>Press your first guessed letter on the keyboard to start.</p>
                 <div class="col-sm-12 border border-white">
                     <p>Correct Choices:</p>
                     <h2 id="musicianname">-------</h2></div>
@@ -36,6 +36,7 @@
             <div class="col-sm-12"><br><h5>Guesses Left:<span id="guessesleft"> </span></h5></div>
         </div>
     </div>
+    <div class="col-sm-12"><input id="reset" type="button" value="Start Over" onclick="reset();" /></div>
     <script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
 
